# h5_editor

./: pyproject.toml  scratch.ipynb
h5_editor/: app.py
